Fixed broken layout.

--- a/public/css/site.less
+++ b/public/css/site.less
@@ -20,6 +20,10 @@
 	.player {
 		margin: 20px 0 30px 0;
 	}
+
+	.meta {
+		margin: 20px 0 0 0;
+	}
 }
 
 .navbar {
@@ -31,5 +35,5 @@
 .centre {
 	float: none;
 	margin-left: auto;
-	margin-right: auto
+	margin-right: auto;
 }
